# mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-ec2.yml
app/: __init__.py  agent.py  auth_session.py  chat_history.py  config.py  guardrails.py  mcp_client.py  signin.py  ui.py
docs/: auth_test_users.md  aws_deployment.md  guardrails.md  mcp_tools.md  order_history.md  order_placement.md  problem_framing.md  product_availability.md  project_structure.md  prompt_iterations.md  test_results.md
scripts/: discover_tools.py  ec2_bootstrap_ubuntu.sh  ec2_diagnose.sh  smoke_order_history.py  smoke_order_placement.py  smoke_product_tools.py
tests/: __init__.py  test_auth_session.py  test_chat_history.py  test_config.py  test_guardrails.py  test_mcp_client_format.py  test_order_history_integration.py  test_order_placement_integration.py  test_product_integration.py  test_run_agent_guardrails.py  test_signin_banner.py  test_ui_smoke.py
